@@ -626,8 +626,8 @@ since this link provides funding for phpMyAdmin.
         algorithm to encrypt the password.<br />
         If you are using the &quot;cookie&quot; auth_type, enter here a random
         passphrase of your choice. It will be used internally by the blowfish
-        algorithm: you won&#8217;t be prompted for this passphrase. The maximum
-        number of characters for this parameter seems to be 46.<br /><br />
+        algorithm: you won&#8217;t be prompted for this passphrase. There is
+        no maximum length for this secret.<br /><br />
         
         Since version 3.1.0 phpMyAdmin can generate this on the fly, but it
         makes a bit weaker security as this generated secret is stored in
