@@ -9,6 +9,7 @@ $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyA
 - patch #2903400 [bookmarks] Status of bookmark table, 
   thanks to Virsacer - virsacer
 - bug [history] QueryHistoryDB is not respected
+- bug #2905629 [auth] Blowfish secret is not hashed 
 
 3.2.4.0 (not yet released)
 - bug [engines] Innodb_buffer_pool_pages_latched no longer returned in status 
